# picsal

./: Cargo.toml  Makefile  README.md  buf.gen.yaml  buf.openapi.gen.yaml  buf.work.yaml  go.mod  go.sum
api/image/v1/: processing.pb.go  processing_grpc.pb.go  processing_http.pb.go
api/v1/: image.pb.go  image_grpc.pb.go  image_http.pb.go
cmd/server/: main.go  wire.go  wire_gen.go
configs/: local.yaml
internal/biz/: biz.go  image.go  image_model.go
internal/conf/: conf.pb.go  conf.proto
internal/data/: data.go  image.go
internal/server/: http.go
internal/service/: image.go  service.go
pkg/bootstrap/: bootstrap.go  env.go  flag.go
pkg/config/: config.go
pkg/image/: history.go  io.go
pkg/image/filter/: blur.go  blur_test.go  channel.go  channel_test.go  clip.go  flip.go  ghoul.go  grey.go  grey_test.go  rotate.go  scale.go  sharpen.go  sharpen_test.go
pkg/image/io/: io.go
pkg/math/: math.go
proto/api/: buf.yaml
proto/api/image/v1/: processing.proto
proto/api/v1/: image.proto
src/: main.rs
src/lib/cache/: history.rs  lru.rs  mod.rs
src/web/: server.rs
src/web/service/: image.rs
